--- a/App.html
+++ b/App.html
@@ -29,14 +29,13 @@
     
                          <!--TASK BAR-->
         <div class="tasks">
-            <div class="itemBlock">
+            <!--<div class="itemBlock">
                     <p>new item here</p>
 
-                           <!--ICONS-->
                     <div class="icon-btn">
                         <i class="fa-sharp fa-solid fa-pencil"></i>
                         <i class="fa-solid fa-xmark"></i>
-                    </div>
+                    </div>-->
                 </div>
             </div>  
         </div>   
