--- a/App.html
+++ b/App.html
@@ -21,10 +21,10 @@
                         <!--INPUT BAR-->
         <div class="todo-list">
             <div id="newtask">
-                <input type="text" class="input-bar"  placeholder="Enter a Task" />
+                <input type="text" class="input-bar" placeholder="Enter a Task" />
 
                           <!--ADD BUTTON-->
-                <button class="addtoTask">Add Task</button>
+                <button class="addtoTask-btn">Add Task</button>
             </div>
     
                          <!--TASK BAR-->
@@ -32,14 +32,12 @@
             <!--<div class="itemBlock">
                     <p>new item here</p>
 
-                    <div class="icon-btn">
+                    <div class="icon-btn>
                         <i class="fa-sharp fa-solid fa-pencil"></i>
                         <i class="fa-solid fa-xmark"></i>
                     </div>-->
                 </div>
-            </div>  
-        </div>   
-
+            </div>     
         <script src="./App.js"></script>
 </body>
 </html>
