--- a/App.html
+++ b/App.html
@@ -16,28 +16,31 @@
         <h1 class="heading">
             My Todo App
         </h1>
-     </div>
         
                         <!--INPUT BAR-->
         <div class="todo-list">
             <div id="newtask">
-                <input type="text" class="input-bar" placeholder="Enter a Task" />
+                <input type="text" class="input-bar" placeholder="Enter a Task " onclick="removeTodo"/>
 
                           <!--ADD BUTTON-->
                 <button class="addtoTask-btn">Add Task</button>
             </div>
     
                          <!--TASK BAR-->
-        <div class="tasks">
+            <div class="tasks">
             <!--<div class="itemBlock">
-                    <p>new item here</p>
-
+                    <p class="parag">new item here</p>
+            </div>
                     <div class="icon-btn>
                         <i class="fa-sharp fa-solid fa-pencil"></i>
                         <i class="fa-solid fa-xmark"></i>
                     </div>-->
+        </div>
+                <div class="btn">
+                    <button class="clearall">Clear all</button>
                 </div>
-            </div>     
+         </div>
+    </div>     
         <script src="./App.js"></script>
 </body>
 </html>
